Install SAB infrastructure
1. add a new attribute 'sab-param' to the list of attributes in gschem
	modified:   gschem/lib/system-gschemrc.scm
2. set 'sab-param=ab:discard' as the default for spice-title-1.sym
	modified:   symbols/spice/spice-title-1.sym
3. add new parameter 'sab-context' to gnetlist w/ basic checks & pass it to xorn
	modified:   xorn/src/command/gnetlist.in
4. add new package 'sab' to hold the SAB processing code
	modified:   xorn/Makefile.am
	modified:   xorn/configure.ac
	new file:   xorn/src/sab/Makefile.am
	new file:   xorn/src/sab/__init__.py
	new file:   xorn/src/sab/sab.py
5. cause xorn-netlist to use --sab-context if provided, look for a context in the backend
   and call the SAB code if a context is avalable, passing the netlist and context list
	modified:   xorn/src/command/netlist.py
6. add a description of SAB and a test-bed/example
	modified:   configure.ac
	modified:   examples/Makefile.am
	new file:   examples/SAB/Makefile.am
	new file:   examples/SAB/README
	new file:   examples/SAB/sab.sch

--- a/xorn/configure.ac
+++ b/xorn/configure.ac
@@ -70,6 +70,7 @@ AC_CONFIG_FILES([
 	src/gaf/Makefile
 	src/command/Makefile
 	src/backend/Makefile
+        src/sab/Makefile
 	tests/Makefile
 	tests/netlist/Makefile
 ])
