--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = gTAG lightning_detector RF_Amp TwoStageAmp
+SUBDIRS = gTAG lightning_detector RF_Amp TwoStageAmp SAB
 
 exampledir = $(docdir)/examples/
 
