Implement bypass action and others
1. Broke out the utility functions so they can be more cleanly used by external scripts (exec to be added)
	modified:   xorn/src/sab/Makefile.am
	modified:   xorn/src/sab/sab.py
	new file:   xorn/src/sab/sab_utils.py
2. Added/modified various test cases to sab.sch
	modified:   examples/SAB/sab.sch
3. Implement the bypass action (modifications to sab_util.py)

Note: bypass makes use of the gaf.netlist.net.merge_into function which appears to be undocumented, but worked very nicely.

--- a/xorn/src/sab/Makefile.am
+++ b/xorn/src/sab/Makefile.am
@@ -27,4 +27,5 @@ sabpyexecdir = $(pyexecdir)/sab
 
 nobase_sabpyexec_PYTHON = \
 	__init__.py \
-        sab.py
+        sab.py \
+        sab_utils.py
