Implement exec action
1. Added exec test cases, tweaked README, and yet more revision of test cases
	modified:   examples/SAB/README
	modified:   examples/SAB/sab.sch
2. Added test/example script
	modified:   examples/SAB/Makefile.am
	new file:   examples/SAB/modify_refdes.py
3. Since processing can now occur prior to netlist generation it may be useful to have a do nothing backend
	modified:   xorn/src/backend/Makefile.am
	new file:   xorn/src/backend/gnet_null.py
4. Implement exec action
	modified:   xorn/src/sab/sab.py
	modified:   xorn/src/sab/sab_utils.py

--- a/examples/SAB/Makefile.am
+++ b/examples/SAB/Makefile.am
@@ -1,7 +1,9 @@
 exampledir = $(docdir)/examples/SAB/
 
 nobase_example_DATA = \
-	sab.sch README
+        sab.sch \
+        README \
+        modify_refdes.py
 
 EXTRA_DIST = $(nobase_example_DATA)
 
